--- a/public/angular-app/tax-list/tax.html
+++ b/public/angular-app/tax-list/tax.html
@@ -8,7 +8,7 @@
     </li>
 </ul> -->
 <div class="income-tax-rate">
-    <div class="table100 ver1 m-b-110 col-sm-4" style="margin-left: 80px; margin-top:20px; float:left;">
+    <div class="table100 ver5 m-b-110 col-sm-4" style="margin-left: 80px; margin-top:20px; float:left;">
         <div class="table100-head">
             <table>
                 <thead>
@@ -21,7 +21,7 @@
                 </thead>
             </table>
         </div>
-        <div class="table100-body js-pscroll">
+        <div class="table100-body">
             <table>
                 <tbody>
                     <tr class="row100 body" ng-repeat="(income, rate) in vm.taxRate">
