--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
         <script src="js/jquery/jquery-3.3.1.min.js"></script>
         <script src="node_modules/angular/angular.js"></script>
         <script src="node_modules/angular-route/angular-route.js"></script>
-
+        <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="angular-app/app.js"></script>
         <script src="angular-app/tax-list/tax-list-controller.js"></script>
         <script src="angular-app/income-tax-data-factory/income-tax-data-factory.js"></script>
