Chart add title

--- a/public/angular-app/tax-list/tax.html
+++ b/public/angular-app/tax-list/tax.html
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div class="income-chart col-sm-6" style="margin-left: 80px; margin-top:20px; display: inline-block;">
+    <div class="income-chart col-l-6" style="margin-left: 80px; margin-top:20px; display: inline-block;">
         <div id="chart"></div>
     </div>
 </div>
