--- a/public/angular-app/tax-list/tax.html
+++ b/public/angular-app/tax-list/tax.html
@@ -35,5 +35,10 @@
 
     <div class="income-chart col-l-6" style="margin-left: 80px; margin-top:20px; display: inline-block;">
         <div id="chart"></div>
+        <div>
+            <button class="button button1" ng-click="vm.incrementQuant()">Increment</button>
+            <button class="button button1" ng-click="vm.resetQuant()">Reset</button>
+            <label ng-model="vm.testQuant">{{vm.testQuant}}</label>
+        </div>
     </div>
 </div>
