--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
         <!--===============================================================================================-->
         <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css" />
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css" />
+        <!-- <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css" /> -->
         <!--===============================================================================================-->
-        <link rel="stylesheet" type="text/css" href="vendor/perfect-scrollbar/perfect-scrollbar.css" />
+        <!-- <link rel="stylesheet" type="text/css" href="vendor/perfect-scrollbar/perfect-scrollbar.css" /> -->
     </head>
 
     <body>
