--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <link href="css/main.css" rel="stylesheet" />
         <link href="css/util.css" rel="stylesheet" />
         <!--===============================================================================================-->
-	    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" />
+	    <!-- <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" /> -->
         <!--===============================================================================================-->
         <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
         <!--===============================================================================================-->
@@ -16,6 +16,8 @@
         <!-- <link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css" /> -->
         <!--===============================================================================================-->
         <!-- <link rel="stylesheet" type="text/css" href="vendor/perfect-scrollbar/perfect-scrollbar.css" /> -->
+        <!--===============================================================================================-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
 
     <body>
@@ -35,9 +37,11 @@
         <script src="js/jquery/jquery-3.3.1.min.js"></script>
         <script src="node_modules/angular/angular.js"></script>
         <script src="node_modules/angular-route/angular-route.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
         <script src="angular-app/app.js"></script>
         <script src="angular-app/tax-list/tax-list-controller.js"></script>
         <script src="angular-app/income-tax-data-factory/income-tax-data-factory.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
