--- a/public/angular-app/tax-list/tax.html
+++ b/public/angular-app/tax-list/tax.html
@@ -34,8 +34,9 @@
     </div>
 
     <div class="income-calculator col-l-6" style="margin-left: 80px; margin-top:20px; display: inline-block;">  
-        <label>Anually income:</label> $<input type="text" class="annual-income" name="annual-income" value="vm.enteredIncome" ng-model="vm.enteredIncome"></input>
-        <input type="submit" class="button btn btn-primary" value="Calculate" ng-click="vm.calculateTax(vm.enteredIncome)"></input>
+        <label>Income Tax Calculator</label><br/>
+        <label>Anually income:</label> $<input type="text" class="annual-income" name="annual-income" value="vm.enteredIncome" ng-model="vm.enteredIncome" ng-keyup="vm.calculateTax(vm.enteredIncome)"></input>
+        <!-- <input type="submit" class="button btn btn-primary" value="Calculate Tax" ng-click="vm.calculateTax(vm.enteredIncome)"></input> -->
         <input type="submit" class="button btn btn-warning" value="Reset" ng-click="vm.resultIncome()"></input>
         <br/>
         <div ng-model="vm.calcualtedResult" ng-hide="!vm.calculatedResult">
