Move calculator out

--- a/public/angular-app/tax-list/tax.html
+++ b/public/angular-app/tax-list/tax.html
@@ -32,30 +32,16 @@
             </table>
         </div>
     </div>
-
-    <div class="income-calculator col-l-6" style="margin-left: 80px; margin-top:20px; display: inline-block;">  
-        <label>Income Tax Calculator</label><br/>
-        <label>Anually income:</label> $<input type="text" class="annual-income" name="annual-income" value="vm.enteredIncome" ng-model="vm.enteredIncome" ng-keyup="vm.calculateTax(vm.enteredIncome)"></input>
-        <!-- <input type="submit" class="button btn btn-primary" value="Calculate Tax" ng-click="vm.calculateTax(vm.enteredIncome)"></input> -->
-        <input type="submit" class="button btn btn-warning" value="Reset" ng-click="vm.resultIncome()"></input>
-        <br/>
-        <div ng-model="vm.calcualtedResult" ng-hide="!vm.calculatedResult">
-            <ul>
-                <li ng-model="vm.CAPTION" ng-repeat="(k, v) in vm.calculatedResult">{{vm.CAPTION[k]}}:  {{v}}</li>
-            </ul>
+    <div class="income-chart col-l-6" style="margin-left: 80px; margin-top:20px; display: inline-block;">
+        <div id="chart"></div>
+        <div class="btn-group btn-group-sm">
+            <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.TOTAL)">{{vm.CHARTTITLE.TOTAL}}</button>
+            <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.FEDERAL)">{{vm.CHARTTITLE.FEDERAL}}</button>
+            <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.QUEBEC)">{{vm.CHARTTITLE.QUEBEC}}</button>
+            <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.MARGINALRATE)">{{vm.CHARTTITLE.MARGINALRATE}}</button>
+            <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.AFTERTAX)">{{vm.CHARTTITLE.AFTERTAX}}</button>
+            <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.MONTHLY)">{{vm.CHARTTITLE.MONTHLY}}</button>
         </div>
     </div>
-</div>
-
-<br>
-<div class="income-chart" style="margin-left: 80px; margin-top:20px; display: inline-block;">
-    <div id="chart"></div>
-    <div class="btn-group btn-group-sm">
-        <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.TOTAL)">{{vm.CHARTTITLE.TOTAL}}</button>
-        <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.FEDERAL)">{{vm.CHARTTITLE.FEDERAL}}</button>
-        <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.QUEBEC)">{{vm.CHARTTITLE.QUEBEC}}</button>
-        <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.MARGINALRATE)">{{vm.CHARTTITLE.MARGINALRATE}}</button>
-        <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.AFTERTAX)">{{vm.CHARTTITLE.AFTERTAX}}</button>
-        <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.MONTHLY)">{{vm.CHARTTITLE.MONTHLY}}</button>
-    </div>
+    
 </div>
