--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
         <script src="angular-app/app.js"></script>
         <script src="angular-app/tax-list/tax-list-controller.js"></script>
         <script src="angular-app/income-tax-data-factory/income-tax-data-factory.js"></script>
+        <script src="angular-app/tax-calculator/tax-calculator-controller.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
