--- a/public/angular-app/tax-list/tax.html
+++ b/public/angular-app/tax-list/tax.html
@@ -7,7 +7,7 @@
         </ul>
     </li>
 </ul> -->
-<div class="income-tax-rate">
+<div class="income-tax-rate ng-cloak">
     <div class="table100 ver5 m-b-110 col-sm-4" style="margin-left: 80px; margin-top:20px; float:left;">
         <div class="table100-head">
             <table>
