--- a/public/index.html
+++ b/public/index.html
@@ -21,24 +21,24 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-default">
+        <nav class="w3-container navbar navbar-default">
                 <div class="container-fluid">
                     <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
+                    <div class="navbar-header w3-bar w3-border w3-light-grey">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">My project</a>
+                    <a class="navbar-brand active" href="#">My project</a>
                     </div>
                 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#/taxrate">Income Tax Rate <span class="sr-only"></span></a></li>
-                        <li><a href="#/taxcalculator">Income Tax Calculator</a></li>
+                        <li class="w3-btn"><a href="#/taxrate">Income Tax Rate <span class="sr-only"></span></a></li>
+                        <li class="w3-btn"><a href="#/taxcalculator">Income Tax Calculator</a></li>
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                         <ul class="dropdown-menu">
