set alignment for table and chart

--- a/public/angular-app/tax-list/tax.html
+++ b/public/angular-app/tax-list/tax.html
@@ -9,7 +9,7 @@
 </ul> -->
 
 <div class="income-tax-rate ng-cloak">
-    <div class="table100 ver5 m-b-110 col-sm-4" style="margin-left: 80px; margin-top:20px; float:left;">
+    <div class="table100 ver5 m-b-110" style="margin-left: 80px; margin-top:20px; float:left;">
         <div class="table100-head">
             <table>
                 <thead>
@@ -33,7 +33,7 @@
             </table>
         </div>
     </div>
-    <div class="income-chart col-l-6" style="margin-left: 80px; margin-top:20px; display: inline-block;">
+    <div class="income-chart" style="margin-left: 80px; margin-top:20px; display: inline-block;">
         <div id="chart"></div>
         <div class="btn-group btn-group-sm">
             <button class="button btn btn-primary" ng-click="vm.updateChart(vm.CHART.TOTAL)">{{vm.CHARTTITLE.TOTAL}}</button>
